--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,18 @@
-name: main
+name: Node.js
 
-on: push
-jobs:  
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
   publish-gpr:
-    #needs: test
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
       packages: write
     steps:
       - uses: actions/checkout@v3
@@ -14,14 +20,7 @@ jobs:
         with:
           node-version: 18
           registry-url: https://npm.pkg.github.com/
-     
-      #- name: "Automated Version Bump"
-      #  uses: "phips28/gh-action-bump-version@master"
-      #  env:
-      #    MEGA_TOKEN: ${{ secrets.MEGA_TOKEN}}
-      #  with:
-      #    version-type: "minor"
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
